@@ -1,5 +1,9 @@
 ﻿1.0.10.1 (unreleased)
+Added source repo URL to welcome screen.
 Added Squealer version to comments in generated output.
+Command prompt now shows current folder if no project name is defined.
+Added CD as shortcut to OPEN command.
+Shortened error message when Git is not detected.
 ^break
 1.0.10.0
 Added readonly option to parameters.
